# Drimboard

./: .gitignore  CLAUDE.md  design.md
.claude/: settings.local.json
drimboard_backend/: .dockerignore  Dockerfile  apprunner.yaml  bulk_import_users.py  pyproject.toml  users_example.csv
drimboard_backend/app/: app.py  aws_utils.py  package-lock.json  package.json  utils.py
drimboard_backend/app/database/: database.py  models.py
drimboard_backend/app/drimboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
drimboard_frontend/: next.config.mjs  package-lock.json  package.json
drimboard_frontend/public/models/: kit_sim.glb  kit_sim_trans.glb
drimboard_frontend/src/app/: globals.css  layout.js  page.js  page.module.css
drimboard_frontend/src/components/: ActivitiesCarousel.js  EmbeddedPage.js  Footer.js  LoginForm.js  Main.js  Navbar.js  PdfViewer.js  SectionFive.js  SectionSix.js  SectionThree.js  SectionTwoCards.js  SetpViewer.js  SmoothScroll.js  VideoEmbed.js
drimboard_frontend/src/context/: AuthContext.js  ToastContext.js
drimboard_frontend/src/lib/: api.js  sanity.js
drimboard_frontend/src/store/: useAppStore.js
drimboard_frontend/src/styles/: ActivitiesCarousel.module.css  EmbeddedPage.module.css  Footer.module.css  Forum.module.css  LoginForm.module.css  Main.module.css  Materiales.module.css  Materials.module.css  MaterialsCourses.module.css  MaterialsMain.module.css  MaterialsSingleCourse.module.css  Navbar.module.css  PdfViewer.module.css  SectionFive.module.css  SectionSix.module.css  SectionThree.module.css  SectionTwoCards.module.css  (+3 more)
(+38 files in other folders)
